--- a/login.html
+++ b/login.html
@@ -306,6 +306,6 @@
 		<!-- setting -->
 		<script type="text/javascript" src="js/main.js"></script>
 
-		<!-- pastikan template ini sudah dibayar, info -> andy (andydch@gmail.com) -->
+		<!-- silakan support -> andy (andydch@gmail.com) -->
 	</body>
 </html>
