--- a/index-01.html
+++ b/index-01.html
@@ -2340,6 +2340,6 @@
 		<!-- setting -->
 		<script type="text/javascript" src="js/main.js"></script>
 
-		<!-- pastikan template ini sudah dibayar, info -> andy (andydch@gmail.com) -->
+		<!-- silakan support -> andy (andydch@gmail.com) -->
 	</body>
 </html>
