update logo & running text dollar

--- a/index-08.html
+++ b/index-08.html
@@ -107,14 +107,14 @@
 				<div class="container-fluid nav-header-container">
 					<!-- start logo -->
 					<div class="col-auto pl-0">
-						<a href="index.html" title="Logo" class="logo"
+						<a href="index.html" title="Logo" class="logo" style="padding: 5px"
 							><img
-								src="images/main/LOGO MDA S HONEY GOLD@1x.png"
-								data-rjs="images/main/LOGO MDA S HONEY GOLD@2x.png"
+								src="images/main/MDA Logo_FC Gold@1x.png"
+								data-rjs="images/main/MDA Logo_FC Gold@2x.png"
 								class="logo-dark"
 								alt="Logo" /><img
-								src="images/main/LOGO MDA S WHITE@1x.png"
-								data-rjs="images/main/LOGO MDA S WHITE@2x.png"
+								src="images/main/MDA Logo_White@1x.png"
+								data-rjs="images/main/MDA Logo_White@2x.png"
 								alt="Logo"
 								class="logo-light default"
 						/></a>
@@ -415,7 +415,7 @@
 									</ul>
 								</li>
 								<li class="dropdown megamenu-fw">
-									<a href="#">DMS</a
+									<a href="#">BMS</a
 									><i
 										class="fas fa-angle-down dropdown-toggle"
 										data-toggle="dropdown"
@@ -1380,7 +1380,9 @@
 											Ea do tempor commodo fugiat.
 										</td>
 										<td style="padding: 10px; background-color: #ddd6d6">
-											Aute culpa sunt magna nisi duis ipsum incididunt voluptate in adipisicing sit. Laborum qui deserunt minim ad dolore mollit. Nostrud mollit commodo ad voluptate.
+											Aute culpa sunt magna nisi duis ipsum incididunt voluptate
+											in adipisicing sit. Laborum qui deserunt minim ad dolore
+											mollit. Nostrud mollit commodo ad voluptate.
 										</td>
 										<td style="padding: 10px; background-color: #ddd6d6">
 											Read more
@@ -1391,7 +1393,12 @@
 											Nisi pariatur velit officia aliquip aute.
 										</td>
 										<td style="padding: 10px; background-color: #ddd6d6">
-											Sunt tempor occaecat id proident sint magna. Fugiat dolore dolor consectetur qui amet do occaecat consequat eiusmod eu voluptate. Magna est aute tempor consectetur velit ex incididunt ea irure. Excepteur laborum mollit eiusmod aute. Tempor nulla adipisicing laborum irure. Veniam eiusmod in fugiat eu sit pariatur.
+											Sunt tempor occaecat id proident sint magna. Fugiat dolore
+											dolor consectetur qui amet do occaecat consequat eiusmod
+											eu voluptate. Magna est aute tempor consectetur velit ex
+											incididunt ea irure. Excepteur laborum mollit eiusmod
+											aute. Tempor nulla adipisicing laborum irure. Veniam
+											eiusmod in fugiat eu sit pariatur.
 										</td>
 										<td style="padding: 10px; background-color: #ddd6d6">
 											Read more
@@ -1399,10 +1406,21 @@
 									</tr>
 									<tr>
 										<td style="padding: 10px; background-color: #ddd6d6">
-											Dolor deserunt nulla et ullamco dolore aute commodo velit ut.
+											Dolor deserunt nulla et ullamco dolore aute commodo velit
+											ut.
 										</td>
 										<td style="padding: 10px; background-color: #ddd6d6">
-											Voluptate commodo eu ullamco pariatur labore consectetur laboris incididunt nisi do cillum. Duis amet nostrud velit labore aute dolor tempor reprehenderit voluptate enim eu quis. Laborum proident eu ut eiusmod ipsum anim reprehenderit et excepteur laboris laboris enim ullamco nostrud. Adipisicing fugiat deserunt ex veniam quis do dolor adipisicing laborum reprehenderit deserunt consequat proident. Incididunt culpa culpa aliqua laboris in dolor minim fugiat officia adipisicing laboris elit aliqua cillum. Dolor officia anim laboris nostrud sint ex excepteur culpa ipsum dolore nostrud sit minim.
+											Voluptate commodo eu ullamco pariatur labore consectetur
+											laboris incididunt nisi do cillum. Duis amet nostrud velit
+											labore aute dolor tempor reprehenderit voluptate enim eu
+											quis. Laborum proident eu ut eiusmod ipsum anim
+											reprehenderit et excepteur laboris laboris enim ullamco
+											nostrud. Adipisicing fugiat deserunt ex veniam quis do
+											dolor adipisicing laborum reprehenderit deserunt consequat
+											proident. Incididunt culpa culpa aliqua laboris in dolor
+											minim fugiat officia adipisicing laboris elit aliqua
+											cillum. Dolor officia anim laboris nostrud sint ex
+											excepteur culpa ipsum dolore nostrud sit minim.
 										</td>
 										<td style="padding: 10px; background-color: #ddd6d6">
 											Read more
@@ -1511,8 +1529,8 @@
 							<a href="index.html"
 								><img
 									class="img-fluid"
-									src="images/main/LOGO MDA S WHITE@1x.png"
-									data-rjs="images/main/LOGO MDA S WHITE@2x.png"
+									src="images/main/MDA Logo_White@1x.png"
+									data-rjs="images/main/MDA Logo_White@2x.png"
 									alt="Logo"
 							/></a>
 						</div>
