--- a/index-12.html
+++ b/index-12.html
@@ -107,14 +107,14 @@
 				<div class="container-fluid nav-header-container">
 					<!-- start logo -->
 					<div class="col-auto pl-0">
-						<a href="index.html" title="Logo" class="logo"
+						<a href="index.html" title="Logo" class="logo" style="padding: 5px"
 							><img
-								src="images/main/LOGO MDA S HONEY GOLD@1x.png"
-								data-rjs="images/main/LOGO MDA S HONEY GOLD@2x.png"
+								src="images/main/MDA Logo_FC Gold@1x.png"
+								data-rjs="images/main/MDA Logo_FC Gold@2x.png"
 								class="logo-dark"
 								alt="Logo" /><img
-								src="images/main/LOGO MDA S WHITE@1x.png"
-								data-rjs="images/main/LOGO MDA S WHITE@2x.png"
+								src="images/main/MDA Logo_White@1x.png"
+								data-rjs="images/main/MDA Logo_White@2x.png"
 								alt="Logo"
 								class="logo-light default"
 						/></a>
@@ -415,7 +415,7 @@
 									</ul>
 								</li>
 								<li class="dropdown megamenu-fw">
-									<a href="#">DMS</a
+									<a href="#">BMS</a
 									><i
 										class="fas fa-angle-down dropdown-toggle"
 										data-toggle="dropdown"
@@ -1690,8 +1690,8 @@
 							<a href="index.html"
 								><img
 									class="img-fluid"
-									src="images/main/LOGO MDA S WHITE@1x.png"
-									data-rjs="images/main/LOGO MDA S WHITE@2x.png"
+									src="images/main/MDA Logo_White@1x.png"
+									data-rjs="images/main/MDA Logo_White@2x.png"
 									alt="Logo"
 							/></a>
 						</div>
