--- a/index.html
+++ b/index.html
@@ -483,7 +483,9 @@
 														margin: auto;
 													"
 												>
-													<marquee>1-,386.28 / USD : Sell => 14.455.92</marquee>
+													<marquee scrolldelay="200" scrollamount="14"
+														>1-,386.28 / USD : Sell => 14.455.92</marquee
+													>
 												</div>
 												<div class="test"></div>
 											</div>
