update tema table

--- a/index-10.html
+++ b/index-10.html
@@ -1358,250 +1358,265 @@
 								<thead>
 									<tr>
 										<th
+											class="text-uppercase"
 											style="
-												background-color: #963d11;
+												background-color: #000;
 												color: #fff;
 												padding: 10px !important;
 											"
 										>
 											Document Number
 										</th>
-										<th style="background-color: #aa9755; color: #fff">Name</th>
-										<th style="background-color: #be4913; color: #fff">
+										<th
+											class="text-uppercase"
+											style="background-color: #000; color: #fff"
+										>
+											Name
+										</th>
+										<th
+											class="text-uppercase"
+											style="background-color: #000; color: #fff"
+										>
 											Category
 										</th>
-										<th style="background-color: #99001e; color: #fff">
+										<th
+											class="text-uppercase"
+											style="background-color: #000; color: #fff"
+										>
 											Remark
 										</th>
-										<th style="background-color: #68c735; color: #fff">
+										<th
+											class="text-uppercase"
+											style="background-color: #000; color: #fff"
+										>
 											Action
 										</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0001
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 1
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 1
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0002
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 2
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 2
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0003
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 3
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 3
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0004
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 4
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 4
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0005
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 5
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 5
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0006
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 6
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 6
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0007
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 7
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 7
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0008
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 8
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 8
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0009
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 9
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 9
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0010
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 10
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 10
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0011
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 11
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 11
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											0012
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Tutorial 12
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Category 12
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Remark
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537;text-align: center;">
 											<i class="fas fa-share-alt bg-action-table"></i>
 											<i class="fas fa-print bg-action-table"></i>
 											<i class="fas fa-download bg-action-table"></i>
