--- a/index-11.html
+++ b/index-11.html
@@ -1357,52 +1357,52 @@
 							>
 								<thead>
 									<tr>
-										<th
+										<th class="text-uppercase"
 											style="
-												background-color: #963d11;
+												background-color: #000;
 												color: #fff;
 												padding: 10px !important;
 											"
 										>
 											Location
 										</th>
-										<th style="background-color: #aa9755; color: #fff">Name</th>
-										<th style="background-color: #be4913; color: #fff">
+										<th class="text-uppercase" style="background-color: #000; color: #fff">Name</th>
+										<th class="text-uppercase" style="background-color: #000; color: #fff">
 											Extension
 										</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Site
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Receptionis
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											300
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Site
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											MSE - Eben Sirait
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											301
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Site
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											MSE
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											302
 										</td>
 									</tr>
