--- a/index-08.html
+++ b/index-08.html
@@ -1358,41 +1358,48 @@
 								<thead>
 									<tr>
 										<th
+											class="text-uppercase"
 											style="
-												background-color: #963d11;
+												background-color: #000;
 												color: #fff;
 												padding: 10px !important;
 											"
 										>
 											Title
 										</th>
-										<th style="background-color: #aa9755; color: #fff">
+										<th
+											class="text-uppercase"
+											style="background-color: #000; color: #fff"
+										>
 											Headline
 										</th>
-										<th style="background-color: #68c735; color: #fff">
+										<th
+											class="text-uppercase"
+											style="background-color: #000; color: #fff"
+										>
 											Action
 										</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Ea do tempor commodo fugiat.
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Aute culpa sunt magna nisi duis ipsum incididunt voluptate
 											in adipisicing sit. Laborum qui deserunt minim ad dolore
 											mollit. Nostrud mollit commodo ad voluptate.
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Read more
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Nisi pariatur velit officia aliquip aute.
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Sunt tempor occaecat id proident sint magna. Fugiat dolore
 											dolor consectetur qui amet do occaecat consequat eiusmod
 											eu voluptate. Magna est aute tempor consectetur velit ex
@@ -1400,16 +1407,16 @@
 											aute. Tempor nulla adipisicing laborum irure. Veniam
 											eiusmod in fugiat eu sit pariatur.
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Read more
 										</td>
 									</tr>
 									<tr>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Dolor deserunt nulla et ullamco dolore aute commodo velit
 											ut.
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Voluptate commodo eu ullamco pariatur labore consectetur
 											laboris incididunt nisi do cillum. Duis amet nostrud velit
 											labore aute dolor tempor reprehenderit voluptate enim eu
@@ -1422,7 +1429,7 @@
 											cillum. Dolor officia anim laboris nostrud sint ex
 											excepteur culpa ipsum dolore nostrud sit minim.
 										</td>
-										<td style="padding: 10px; background-color: #ddd6d6">
+										<td style="padding: 10px; background-color: #bfa537">
 											Read more
 										</td>
 									</tr>
