update popup hover

--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 				</div>
 			</div>
 		</section>
-		<section
+		<!-- <section
 			style="padding: 0 !important; background-color: #8e4220 !important"
 		>
 			<div class="container-fluid">
@@ -1013,13 +1013,12 @@
 					></div>
 				</div>
 			</div>
-		</section>
-		<section
+		</section> -->
+		<!-- <section
 			style="padding: 0 !important; background-color: #986432 !important"
 		>
 			<div class="container-fluid">
 				<div class="row align-items-center">
-					<!-- start slogan -->
 					<div class="col-lg-3 col-md-3" style="text-align: center">
 						<a href="index-02.html">
 							<img
@@ -1030,8 +1029,6 @@
 							/>
 						</a>
 					</div>
-					<!-- end slogan -->
-					<!-- start logo -->
 					<div class="col-lg-9 col-md-9 text-left" style="padding: 15px">
 						<span class="company-memo" style="color: #fff"
 							>COMPANY BULLETINS</span
@@ -1045,7 +1042,6 @@
 							publishing packages and web page editors</span
 						>
 					</div>
-					<!-- end logo -->
 				</div>
 				<div class="row">
 					<div
@@ -1054,13 +1050,12 @@
 					></div>
 				</div>
 			</div>
-		</section>
-		<section
+		</section> -->
+		<!-- <section
 			style="padding: 0 !important; background-color: #8e4220 !important"
 		>
 			<div class="container-fluid">
 				<div class="row align-items-center">
-					<!-- start slogan -->
 					<div class="col-lg-3 col-md-3" style="text-align: center">
 						<img
 							src="images/main/Final_Icon Menu-03.png"
@@ -1069,8 +1064,6 @@
 							class="img-link img-fluid"
 						/>
 					</div>
-					<!-- end slogan -->
-					<!-- start logo -->
 					<div class="col-lg-9 col-md-9 text-left" style="padding: 15px">
 						<span class="company-memo" style="color: #fcae0c"
 							>COMPANY ANNOUNCEMENTS</span
@@ -1084,7 +1077,6 @@
 							publishing packages and web page editors</span
 						>
 					</div>
-					<!-- end logo -->
 				</div>
 				<div class="row">
 					<div
@@ -1093,13 +1085,12 @@
 					></div>
 				</div>
 			</div>
-		</section>
-		<section
+		</section> -->
+		<!-- <section
 			style="padding: 0 !important; background-color: #986432 !important"
 		>
 			<div class="container-fluid">
 				<div class="row align-items-center">
-					<!-- start slogan -->
 					<div class="col-lg-3 col-md-3" style="text-align: center">
 						<img
 							src="images/main/Final_Icon Menu-03.png"
@@ -1108,8 +1099,6 @@
 							class="img-link img-fluid"
 						/>
 					</div>
-					<!-- end slogan -->
-					<!-- start logo -->
 					<div class="col-lg-9 col-md-9 text-left" style="padding: 15px">
 						<span class="company-memo" style="color: #fff">COMPANY NEWS</span
 						><br /><br />
@@ -1122,15 +1111,14 @@
 							publishing packages and web page editors</span
 						>
 					</div>
-					<!-- end logo -->
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- start feature box section -->
 		<section
 			class="wow fadeIn text-center text-md-left"
 			style="
-				background-image: url('images/main/BG Value.jpg');
+				background-image: url('images/main/Artboard 1 copy 2 (1).jpg');
 				background-repeat: no-repeat;
 			"
 		>
@@ -1138,7 +1126,7 @@
 				<div class="row">
 					<!-- start feature box item -->
 					<div class="col-12" style="text-align: center">
-						<h1 style="color: #fff; text-align: left">Value</h1>
+						<!-- <h1 style="color: #000; text-align: left;font-weight: 700;">Value</h1> -->
 						<img
 							src="images/main/Final Value-01.png"
 							data-rjs="images/main/Final Value-01.png"
@@ -1256,6 +1244,15 @@
 								onmouseover="showMenu('menu3');"
 								style="cursor: pointer"
 							/>
+							<area
+								target=""
+								alt="Human Capital"
+								title="Human Capital"
+								coords="301,403,410,405,353,309"
+								shape="poly"
+								onmouseover="showMenu('menu4');"
+								style="cursor: pointer"
+							/>
 						</map>
 						<div id="stakeholder" class="frame-style">
 							<ul>
@@ -1286,11 +1283,12 @@
 							</ul>
 						</div>
 						<div id="menu4" class="frame-style">
-							<h1>Menu 4</h1>
-							<a href="link1.htm">Link1</a>
-							<a href="link2.htm">Link2</a>
-							<a href="link3.htm">Link3</a>
-							<a href="link4.htm">Link4</a>
+							<ul>
+								<li>Organisation</li>
+								<li>Recruitment</li>
+								<li>Training & Development</li>
+								<li>Working Condition & Benefits</li>
+							</ul>
 						</div>
 						<!-- <a
 							href="#"
