penyesuaian responsif dan image banner company

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 				<div class="row align-items-center" style="padding: 15px">
 					<div class="col-md-8 col-sm-12 col-xs-8">
 						<div class="row" style="padding-top: 35px">
-							<div class="col-md-4 col-sm-4 col-xs-4">
+							<div class="col-md-4 col-sm-4 col-xs-4" style="padding-bottom: 50px;">
 								<div
 									style="
 										background-color: #fff;
@@ -839,7 +839,7 @@
 									</span>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-4 col-xs-4">
+							<div class="col-md-4 col-sm-4 col-xs-4" style="padding-bottom: 50px;">
 								<div
 									style="
 										background-color: #fff;
@@ -873,7 +873,7 @@
 									</span>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-4 col-xs-4">
+							<div class="col-md-4 col-sm-4 col-xs-4" style="padding-bottom: 50px;">
 								<div
 									style="
 										background-color: #fff;
@@ -931,15 +931,15 @@
 		</section>
 		<!-- start calendar section -->
 		<!-- end calendar section -->
-		<section style="padding: 0 !important; background-color: #fff !important">
+		<section class="red-phone" style="padding: 0 !important; background-color: #fff !important;">
 			<div class="container-fluid">
 				<div class="row align-items-center" style="padding: 15px">
 					<div class="col-md-6 col-sm-12 col-xs-6">
 						<div class="row">
-							<div class="col-md-2 col-sm-12 col-xs-2" style="margin: auto">
+							<div class="col-md-2 col-sm-12 col-xs-2" style="margin: auto;text-align: center;">
 								<i
 									class="fas fa-phone-square"
-									style="font-size: 100px; color: #8c421f"
+									style="font-size: 100px; color: red"
 								></i>
 							</div>
 							<div
@@ -947,12 +947,12 @@
 								style="color: #fcae0c; line-height: 1.5"
 							>
 								<span
-									style="font-size: 25px; color: #8d4320; font-weight: 700"
+									style="font-size: 25px; color: red; font-weight: 700"
 									class="text-uppercase"
 									>Red Phone</span
 								><br />
 								<span style="font-size: 35px">+62 812 3456 789</span><br />
-								<span style="font-size: 25px; color: #8d4320; font-weight: 700"
+								<span style="font-size: 25px; color: red; font-weight: 700"
 									>CLICK HERE FOR EMERGENCY CONTACT</span
 								>
 							</div>
@@ -962,16 +962,17 @@
 						<div
 							style="
 								text-align: center;
-								background-color: #bba64d;
+								/* background-color: #bba64d; */
 								padding: 5px;
-								width: 50%;
+								width: 95%;
 								color: #000;
 								font-weight: 700;
 								height: 350px;
 								margin: auto;
 							"
 						>
-							COMPANY BANNER
+							<!-- COMPANY BANNER -->
+							<img src="images/main/Poster Sosialisasi Protokol Kesehatan 5.jpg" class="img-fluid" alt="" />
 						</div>
 					</div>
 				</div>
