--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 									"
 								>
 									<img
-										src="images/main/document.png"
+										src="images/main/Final_Icon Menu-05.png"
 										alt=""
 										style="
 											width: 35%;
@@ -850,7 +850,7 @@
 									"
 								>
 									<img
-										src="images/main/megaphone.png"
+										src="images/main/Final_Icon Menu-06.png"
 										alt=""
 										style="
 											width: 35%;
@@ -884,7 +884,7 @@
 									"
 								>
 									<img
-										src="images/main/open-book.png"
+										src="images/main/Final_Icon Menu-07.png"
 										alt=""
 										style="
 											width: 35%;
@@ -933,7 +933,7 @@
 		<!-- end calendar section -->
 		<section class="red-phone" style="padding: 0 !important; background-color: #fff !important;">
 			<div class="container-fluid">
-				<div class="row align-items-center" style="padding: 15px">
+				<div class="row align-items-center">
 					<div class="col-md-6 col-sm-12 col-xs-6">
 						<div class="row">
 							<div class="col-md-2 col-sm-12 col-xs-2" style="margin: auto;text-align: center;">
@@ -972,7 +972,7 @@
 							"
 						>
 							<!-- COMPANY BANNER -->
-							<img src="images/main/Poster Sosialisasi Protokol Kesehatan 5.jpg" class="img-fluid" alt="" />
+							<img src="images/main/Poster Sosialisasi Protokol Kesehatan 5.jpg" class="img-fluid" alt="" style="max-width: 350px !important;" />
 						</div>
 					</div>
 				</div>
@@ -1129,9 +1129,11 @@
 					<div class="col-12" style="text-align: center">
 						<!-- <h1 style="color: #000; text-align: left;font-weight: 700;">Value</h1> -->
 						<img
-							src="images/main/Final Value-01.png"
-							data-rjs="images/main/Final Value-01.png"
+							src="images/main/Final Value-01 (1).png"
+							data-rjs="images/main/Final Value-01 (1).png"
 							alt=""
+							style="cursor: zoom-in;"
+							class="zoom"
 						/>
 					</div>
 				</div>
