--- a/index.html
+++ b/index.html
@@ -1427,10 +1427,21 @@
 									<li style="background-color: #75553e; padding: 5px 15px">
 										<a
 											class="youtube text-white-2"
-											href="https://instagram.com/"
+											href="https://youtube.com/"
 											target="_blank"
 											><i
 												class="fab fa-youtube no-margin-right"
+												aria-hidden="true"
+											></i
+										></a>
+									</li>
+									<li style="background-color: #75553e; padding: 5px 15px">
+										<a
+											class="linkedin text-white-2"
+											href="https://linkedin.com/"
+											target="_blank"
+											><i
+												class="fab fa-linkedin no-margin-right"
 												aria-hidden="true"
 											></i
 										></a>
