atur warna kalender, icon 3

--- a/index.html
+++ b/index.html
@@ -814,14 +814,14 @@
 									"
 								>
 									<img
-										src="images/main/Final_Icon Menu-05.png"
+										src="images/main/Final_Icon Menu-05 (1).png"
 										alt=""
 										style="
-											width: 35%;
-											background-color: brown;
+											width: 45%;
+											/* background-color: #fff; */
 											padding: 15px;
-											border-radius: 35px;
-											margin-top: -50px;
+											/* border-radius: 35px; */
+											margin-top: -90px;
 										"
 									/><br /><br />
 									<span
@@ -850,14 +850,14 @@
 									"
 								>
 									<img
-										src="images/main/Final_Icon Menu-06.png"
+										src="images/main/Final_Icon Menu-06 (1).png"
 										alt=""
 										style="
-											width: 35%;
-											background-color: brown;
+											width: 45%;
+											/* background-color: #fff; */
 											padding: 15px;
-											border-radius: 35px;
-											margin-top: -50px;
+											/* border-radius: 35px; */
+											margin-top: -90px;
 										"
 									/><br /><br />
 									<span class="text-uppercase" style="color: black"
@@ -884,14 +884,14 @@
 									"
 								>
 									<img
-										src="images/main/Final_Icon Menu-07.png"
+										src="images/main/Final_Icon Menu-07 (1).png"
 										alt=""
 										style="
-											width: 35%;
-											background-color: brown;
+											width: 45%;
+											/* background-color: #fff; */
 											padding: 15px;
-											border-radius: 35px;
-											margin-top: -50px;
+											/* border-radius: 35px; */
+											margin-top: -90px;
 										"
 									/><br /><br />
 									<span class="text-uppercase" style="color: black"
@@ -917,7 +917,7 @@
 							style="
 								color: #000;
 								text-align: center;
-								background-color: #fcae0c;
+								background-color: #e8ecef;
 								width: 350px;
 								margin: auto;
 							"
